chore: change operations from file/config to ssc/smt
