# constants/apiEndpoints.ts
@@ -15,17 +15,17 @@ export const API_ENDPOINTS = {
     PACKAGE_INIT: '/api/depex/graph/package/init',
     VERSION_STATUS: '/api/depex/graph/version/status',
     OPERATION: {
-      CONFIG: {
-        COMPLETE_CONFIG: '/api/depex/operation/config/complete_config',
-        CONFIG_BY_IMPACT: '/api/depex/operation/config/config_by_impact',
-        VALID_CONFIG: '/api/depex/operation/config/valid_config',
+      SSC: {
+        FILE_INFO: '/api/depex/operation/ssc/file_info',
       },
-      FILE: {
-        FILE_INFO: '/api/depex/operation/file/file_info',
-        FILTER_CONFIGS: '/api/depex/operation/file/filter_configs',
-        MAXIMIZE_IMPACT: '/api/depex/operation/file/maximize_impact',
-        MINIMIZE_IMPACT: '/api/depex/operation/file/minimize_impact',
-        VALID_GRAPH: '/api/depex/operation/file/valid_graph',
+      SMT: {
+        FILTER_CONFIGS: '/api/depex/operation/smt/filter_configs',
+        MAXIMIZE_IMPACT: '/api/depex/operation/smt/maximize_impact',
+        MINIMIZE_IMPACT: '/api/depex/operation/smt/minimize_impact',
+        VALID_GRAPH: '/api/depex/operation/smt/valid_graph',
+        COMPLETE_CONFIG: '/api/depex/operation/smt/complete_config',
+        CONFIG_BY_IMPACT: '/api/depex/operation/smt/config_by_impact',
+        VALID_CONFIG: '/api/depex/operation/smt/valid_config',
       },
     },
   },
